--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.5",
+    "@types/react": "17.0.2",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
-    "next": "13.1.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "next": "11.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "typescript": "^4.9.4"
   }
 }
