--- a/package.json
+++ b/package.json
@@ -6,14 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
-    "@types/react": "17.0.2",
     "@types/node": "18.11.18",
+    "@types/react": "17.0.2",
+    "eslint-config-next": "^11.1.4",
+    "eslint-config-prettier": "^8.6.0",
     "next": "11.1.0",
+    "prettier": "^2.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix --max-warnings=0 --no-ignore"
+    ],
+    "*.{html,md,mdx}": [
+      "prettier --write"
+    ]
   }
 }
