--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/node": "18.11.18",
     "@types/react": "17.0.2",
+    "clsx": "^1.2.1",
     "eslint-config-next": "^11.1.4",
     "eslint-config-prettier": "^8.6.0",
     "next": "11.1.0",
@@ -26,11 +27,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
-    "lint-staged": "^13.0.3"
+    "lint-staged": "^13.0.3",
+    "postcss": "^8.4.21",
+    "postcss-nesting": "^11.0.0",
+    "tailwindcss": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
