--- a/package.json
+++ b/package.json
@@ -7,40 +7,60 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "test:coverage": "jest --coverage --no-watch",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "pre-push": "npm run test:ci"
   },
   "dependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "17.0.2",
-    "clsx": "^1.2.1",
-    "eslint-config-next": "^11.1.4",
-    "eslint-config-prettier": "^8.6.0",
     "next": "11.1.0",
-    "prettier": "^2.8.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typescript": "^4.9.4"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "18.11.18",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.4.1",
+    "prettier": "^2.8.3",
+    "clsx": "^1.2.1",
     "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.4",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.10.0",
     "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.0.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test:ci"
+    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --cache --fix --max-warnings=0 --no-ignore"
+      "eslint --cache --fix --max-warnings=0 --no-ignore",
+      "jest --bail --findRelatedTests"
     ],
     "*.{html,md,mdx}": [
       "prettier --write"
