--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^29.4.1",
-    "prettier": "^2.8.3",
     "clsx": "^1.2.1",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.4",
@@ -40,15 +39,19 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.10.0",
+    "formik": "^2.2.9",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.0.0",
+    "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "yup": "^0.32.11"
   },
   "husky": {
     "hooks": {
