--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "next": "11.1.0",
+    "next-auth": "^4.18.8",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-toastify": "^9.1.1",
@@ -36,7 +37,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.11.18",
-    "@types/react": "^17.0.2",
+    "@types/react": "^18.0.1",
     "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
