Add and configure Next Auth Github provider, cover components ans files with basic tests, update tsconfig and jest config files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@utils": ["./utils/*"],
+      "@modules": ["./modules/*"],
+      "@services": ["./services/*"],
+      "@types": ["./types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
