--- a/package.json
+++ b/package.json
@@ -20,23 +20,26 @@
     "@testing-library/react": "^12.1.2",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^29.4.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "lodash": "^4.17.21",
     "next": "11.1.0",
     "next-auth": "^4.18.8",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4",
-    "yup": "^0.32.11",
-    "lodash": "^4.17.21"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.11.18",
     "@types/react": "^18.0.1",
     "@types/react-dom": "^17.0.2",
@@ -51,6 +54,8 @@
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "lint-staged": "^13.0.3",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.9.0",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.0.0",
     "prettier": "^2.8.3",
