--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lodash": "^4.17.21",
-    "next": "11.1.0",
+    "next": "12.3.1",
     "next-auth": "^4.18.8",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-toastify": "^9.1.1",
@@ -41,6 +42,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.11.18",
+    "@types/node-fetch": "^2.6.1",
     "@types/react": "^18.0.1",
     "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
