--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "react-dom": "^17.0.2",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4",
+    "uuidv4": "^6.2.13",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
