--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4",
     "uuidv4": "^6.2.13",
