Handle header on scroll behavior with custom hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@model": ["./model/*"],
       "@lib": ["./lib/*"],
       "@mocks": ["./mocks/*"],
-      "@components": ["./components/*"]
+      "@components": ["./components/*"],
+      "@hooks": ["./hooks/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
