--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-loading-skeleton": "^3.1.1",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.4",
     "uuidv4": "^6.2.13",
     "yup": "^0.32.11"
