Implement movie/serial playing trailer functionality for Hero and Details pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "@hooks": ["./hooks/*"]
     }
   },
+  "typeRoots": ["./types", "./node_modules/@types/"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
