--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lodash": "^4.17.21",
+    "movie-trailer": "^3.0.0",
     "next": "12.3.1",
     "next-auth": "^4.18.8",
     "node-fetch": "^2.6.1",
@@ -36,6 +37,7 @@
     "react-loading-skeleton": "^3.1.1",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.4",
     "uuidv4": "^6.2.13",
