--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.1.1",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
