--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.1.1",
     "react-query": "^3.39.3",
